bubble spacing fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -418,7 +418,7 @@ Retrieved 2026-05-19, License - CC BY-SA 4.0
   align-items: center;
   justify-content: center;
   position: relative;
-  margin-top: 6%;
+  margin-top: 8%;
   margin-bottom: 15%;
 }
 
